--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:orientation="vertical"
   android:layout_width="fill_parent"
-  android:layout_height="fill_parent">
+  android:layout_height="fill_parent"
+  android:orientation="vertical" >
 
-  <TextView
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="Hello World, MainActivity" />
+  <android.support.v4.view.ViewPager
+    android:id="@+id/main_view_pager"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+
+    <com.realbeauty.allie.ui.main.SectionTabStrip
+      android:id="@+id/main_pager_title_strip"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_gravity="top"
+      android:background="#33b5e5"
+      android:paddingBottom="4dp"
+      android:paddingTop="4dp"
+      android:textColor="#fff" />
+  </android.support.v4.view.ViewPager>
+
 </LinearLayout>
-
