--- a/res/layout/fragment_contact_details.xml
+++ b/res/layout/fragment_contact_details.xml
@@ -1,8 +1,217 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="wrap_content"
   android:layout_height="match_parent"
-  android:orientation="vertical" >
-  
+  android:fillViewport="true" >
 
-</LinearLayout>
+  <LinearLayout
+    style="@style/parent_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
+
+    <LinearLayout
+      android:id="@+id/fragment_contact_details_address"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="@drawable/selectable"
+      android:clickable="true"
+      android:orientation="horizontal" >
+
+      <TextView
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="25"
+        android:text="@string/contact_details_address_title"
+        android:textColor="@color/holo_blue_dark" />
+
+      <TextView
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="75"
+        android:text="@string/contact_details_address"
+        android:textColor="#000000" />
+    </LinearLayout>
+
+    <android.Space
+      android:layout_width="match_parent"
+      android:layout_height="0dip"
+      android:layout_weight="1" />
+
+    <LinearLayout
+      android:id="@+id/fragment_contact_details_telephone"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="@drawable/selectable"
+      android:clickable="true"
+      android:orientation="horizontal"
+      android:paddingBottom="10dip" >
+
+      <TextView
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="25"
+        android:text="@string/contact_details_tel_title"
+        android:textColor="@color/holo_blue_dark" />
+
+      <TextView
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="75"
+        android:text="@string/contact_details_tel"
+        android:textColor="#000000" />
+    </LinearLayout>
+
+    <android.Space
+      android:layout_width="match_parent"
+      android:layout_height="0dip"
+      android:layout_weight="1" />
+
+    <LinearLayout
+      android:id="@+id/fragment_contact_details_email"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="@drawable/selectable"
+      android:clickable="true"
+      android:orientation="horizontal"
+      android:paddingBottom="10dip" >
+
+      <TextView
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="25"
+        android:text="@string/contact_details_email_title"
+        android:textColor="@color/holo_blue_dark" />
+
+      <TextView
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="75"
+        android:text="@string/contact_details_email"
+        android:textColor="#000000" />
+    </LinearLayout>
+
+    <android.Space
+      android:layout_width="match_parent"
+      android:layout_height="0dip"
+      android:layout_weight="2" />
+
+    <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/contact_details_booking_info_1"
+      android:textColor="#000000" />
+
+    <android.Space
+      android:layout_width="match_parent"
+      android:layout_height="0dip"
+      android:layout_weight="1" />
+
+    <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/contact_details_booking_info_2"
+      android:textColor="#000000" />
+
+    <android.Space
+      android:layout_width="match_parent"
+      android:layout_height="0dip"
+      android:layout_weight="1" />
+
+    <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/contact_details_opening_hours_title"
+      android:textColor="#000000" />
+
+    <android.Space
+      android:layout_width="match_parent"
+      android:layout_height="0dip"
+      android:layout_weight="1" />
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      android:paddingLeft="5dip" >
+
+      <TextView
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="25"
+        android:text="@string/contact_details_opening_hours_days_1"
+        android:textColor="@color/holo_blue_dark" />
+
+      <TextView
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="75"
+        android:text="@string/contact_details_opening_hours_times_1"
+        android:textColor="#000000" />
+    </LinearLayout>
+
+    <android.Space
+      android:layout_width="match_parent"
+      android:layout_height="0dip"
+      android:layout_weight="1" />
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      android:paddingLeft="5dip" >
+
+      <TextView
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="25"
+        android:text="@string/contact_details_opening_hours_days_2"
+        android:textColor="@color/holo_blue_dark" />
+
+      <TextView
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="75"
+        android:text="@string/contact_details_opening_hours_times_2"
+        android:textColor="#000000" />
+    </LinearLayout>
+
+    <android.Space
+      android:layout_width="match_parent"
+      android:layout_height="0dip"
+      android:layout_weight="1" />
+
+    <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/contact_details_opening_hours_subtitle"
+      android:textColor="#000000" />
+
+    <android.Space
+      android:layout_width="match_parent"
+      android:layout_height="0dip"
+      android:layout_weight="1" />
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      android:paddingLeft="5dip" >
+
+      <TextView
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="25"
+        android:text="@string/contact_details_opening_hours_days_3"
+        android:textColor="@color/holo_blue_dark" />
+
+      <TextView
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="75"
+        android:text="@string/contact_details_opening_hours_times_3"
+        android:textColor="#000000" />
+    </LinearLayout>
+  </LinearLayout>
+
+</ScrollView>
