--- a/res/layout/fragment_location.xml
+++ b/res/layout/fragment_location.xml
@@ -1,8 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/location_map_position"
+  style="@style/parent_layout"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:background="@drawable/selectable"
+  android:clickable="true"
   android:orientation="vertical" >
-  
+
+  <ImageView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:contentDescription="@string/content_desc_map_salon_location"
+    android:src="@drawable/map_view" />
+
+  <android.Space
+    android:layout_width="match_parent"
+    android:layout_height="0dip"
+    android:layout_weight="1" />
+
+  <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/contact_details_address_title"
+    android:textColor="@color/holo_blue_dark" />
+
+  <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/contact_details_address"
+    android:textColor="#000000" />
+
+  <android.Space
+    android:layout_width="match_parent"
+    android:layout_height="0dip"
+    android:layout_weight="3" />
 
 </LinearLayout>
