--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -2,5 +2,6 @@
 <resources>
 
   <item name="parent_padding" type="dimen">20dip</item>
+  <item name="card_margin" type="dimen">20dip</item>
 
 </resources>
