--- a/res/values/styles_real_beauty.xml
+++ b/res/values/styles_real_beauty.xml
@@ -35,6 +35,7 @@
     <item name="actionModeBackground">@drawable/cab_background_top_real_beauty</item>
     <item name="actionModeSplitBackground">@drawable/cab_background_bottom_real_beauty</item>
     <item name="actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Real_beauty</item>
+    <item name="android:windowBackground">@color/background</item>
   </style>
 
   <style name="ActionBar.Solid.Real_beauty" parent="@style/Widget.Sherlock.Light.ActionBar.Solid">
@@ -43,6 +44,8 @@
     <item name="backgroundSplit">@drawable/ab_bottom_solid_real_beauty</item>
     <item name="progressBarStyle">@style/ProgressBar.Real_beauty</item>
     <item name="displayOptions">showHome|useLogo</item>
+    <item name="android:icon">@drawable/ic_logo</item>
+    <item name="icon">@drawable/ic_logo</item>
   </style>
 
   <style name="ActionBar.Transparent.Real_beauty" parent="@style/Widget.Sherlock.Light.ActionBar">
