--- a/res/layout/fragment_location.xml
+++ b/res/layout/fragment_location.xml
@@ -19,6 +19,7 @@
     <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_gravity="center"
       android:contentDescription="@string/content_desc_map_salon_location"
       android:src="@drawable/map_view" />
 
