--- a/res/layout/fragment_contact_details.xml
+++ b/res/layout/fragment_contact_details.xml
@@ -6,7 +6,7 @@
   android:fillViewport="true" >
 
   <LinearLayout
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/background_card"
     android:orientation="vertical"
