--- a/res/layout-sw600dp-port/fragment_location.xml
+++ b/res/layout-sw600dp-port/fragment_location.xml
@@ -24,18 +24,25 @@
       android:contentDescription="@string/content_desc_map_salon_location"
       android:src="@drawable/map_view" />
 
-    <TextView
-      android:layout_width="wrap_content"
+    <LinearLayout
+      android:id="@+id/fragment_contact_details_address"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:padding="15dip"
-      android:text="@string/contact_details_address_title"
-      android:textColor="@color/holo_blue_dark" />
+      android:orientation="vertical"
+      android:padding="10dip" >
 
-    <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/contact_details_address"
-      android:textColor="#000000" />
+      <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/contact_details_address_title"
+        android:textColor="@color/holo_blue_dark" />
+
+      <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/contact_details_address"
+        android:textColor="#000000" />
+    </LinearLayout>
   </LinearLayout>
 
 </LinearLayout>
