--- a/res/layout/fragment_contact_details.xml
+++ b/res/layout/fragment_contact_details.xml
@@ -13,34 +13,6 @@
     android:padding="@dimen/card_margin" >
 
     <LinearLayout
-      android:id="@+id/fragment_contact_details_address"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:background="@drawable/selectable"
-      android:clickable="true"
-      android:orientation="horizontal" >
-
-      <TextView
-        android:layout_width="0dip"
-        android:layout_height="wrap_content"
-        android:layout_weight="30"
-        android:text="@string/contact_details_address_title"
-        android:textColor="@color/holo_blue_dark" />
-
-      <TextView
-        android:layout_width="0dip"
-        android:layout_height="wrap_content"
-        android:layout_weight="70"
-        android:text="@string/contact_details_address"
-        android:textColor="#000000" />
-    </LinearLayout>
-
-    <android.Space
-      android:layout_width="match_parent"
-      android:layout_height="0dip"
-      android:layout_weight="1" />
-
-    <LinearLayout
       android:id="@+id/fragment_contact_details_telephone"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -114,6 +86,17 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/contact_details_opening_hours_title"
+      android:textColor="#000000" />
+
+    <android.Space
+      android:layout_width="match_parent"
+      android:layout_height="0dip"
+      android:layout_weight="1" />
+
+    <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/contact_details_booking_info_2"
       android:textColor="#000000" />
 
     <android.Space
