--- a/res/layout/fragment_location.xml
+++ b/res/layout/fragment_location.xml
@@ -28,17 +28,24 @@
       android:layout_height="0dip"
       android:layout_weight="30" />
 
-    <TextView
-      android:layout_width="wrap_content"
+    <LinearLayout
+      android:id="@+id/fragment_contact_details_address"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="@string/contact_details_address_title"
-      android:textColor="@color/holo_blue_dark" />
+      android:orientation="vertical" >
 
-    <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/contact_details_address"
-      android:textColor="#000000" />
+      <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/contact_details_address_title"
+        android:textColor="@color/holo_blue_dark" />
+
+      <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/contact_details_address"
+        android:textColor="#000000" />
+    </LinearLayout>
 
     <android.Space
       android:layout_width="match_parent"
