--- a/res/layout-land/fragment_location.xml
+++ b/res/layout-land/fragment_location.xml
@@ -13,13 +13,12 @@
     android:layout_margin="@dimen/card_margin"
     android:background="@drawable/background_card"
     android:clickable="true"
-    android:gravity="center_vertical"
     android:orientation="horizontal"
     tools:ignore="UselessParent" >
 
     <ImageView
       android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_height="match_parent"
       android:layout_gravity="center"
       android:contentDescription="@string/content_desc_map_salon_location"
       android:src="@drawable/map_view" />
@@ -29,7 +28,8 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      android:padding="10dip" >
+      android:paddingLeft="20dip"
+      android:paddingRight="20dip" >
 
       <TextView
         android:layout_width="wrap_content"
