--- a/res/layout/fragment_contact_details.xml
+++ b/res/layout/fragment_contact_details.xml
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="70"
         android:text="@string/contact_details_tel"
-        android:textColor="#000000" />
+        android:textColor="@color/text_color" />
     </LinearLayout>
 
     <android.Space
@@ -63,7 +63,7 @@
         android:layout_weight="70"
         android:ellipsize="marquee"
         android:text="@string/contact_details_email"
-        android:textColor="#000000" />
+        android:textColor="@color/text_color" />
     </LinearLayout>
 
     <android.Space
@@ -75,7 +75,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/contact_details_booking_info_1"
-      android:textColor="#000000" />
+      android:textColor="@color/text_color" />
 
     <android.Space
       android:layout_width="match_parent"
@@ -86,7 +86,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/contact_details_booking_info_2"
-      android:textColor="#000000" />
+      android:textColor="@color/text_color" />
 
     <android.Space
       android:layout_width="match_parent"
@@ -97,7 +97,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/contact_details_opening_hours_title"
-      android:textColor="#000000" />
+      android:textColor="@color/text_color" />
 
     <android.Space
       android:layout_width="match_parent"
@@ -107,8 +107,7 @@
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:orientation="horizontal"
-      android:paddingLeft="5dip" >
+      android:orientation="horizontal" >
 
       <TextView
         android:layout_width="0dip"
@@ -122,7 +121,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="70"
         android:text="@string/contact_details_opening_hours_times_1"
-        android:textColor="#000000" />
+        android:textColor="@color/text_color" />
     </LinearLayout>
 
     <android.Space
@@ -133,8 +132,7 @@
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:orientation="horizontal"
-      android:paddingLeft="5dip" >
+      android:orientation="horizontal" >
 
       <TextView
         android:layout_width="0dip"
@@ -148,7 +146,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="70"
         android:text="@string/contact_details_opening_hours_times_2"
-        android:textColor="#000000" />
+        android:textColor="@color/text_color" />
     </LinearLayout>
 
     <android.Space
@@ -160,7 +158,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/contact_details_opening_hours_subtitle"
-      android:textColor="#000000" />
+      android:textColor="@color/text_color" />
 
     <android.Space
       android:layout_width="match_parent"
@@ -170,8 +168,7 @@
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:orientation="horizontal"
-      android:paddingLeft="5dip" >
+      android:orientation="horizontal" >
 
       <TextView
         android:layout_width="0dip"
@@ -185,7 +182,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="70"
         android:text="@string/contact_details_opening_hours_times_3"
-        android:textColor="#000000" />
+        android:textColor="@color/text_color" />
     </LinearLayout>
   </LinearLayout>
 
