--- a/res/layout/fragment_location.xml
+++ b/res/layout/fragment_location.xml
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/contact_details_address"
-        android:textColor="#000000" />
+        android:textColor="@color/text_color" />
     </LinearLayout>
 
     <android.Space
