--- a/res/layout/list_item_treatment.xml
+++ b/res/layout/list_item_treatment.xml
@@ -10,6 +10,7 @@
     android:layout_width="0dip"
     android:layout_height="wrap_content"
     android:layout_weight="1"
+    android:textColor="@color/text_color"
     android:textIsSelectable="false" />
 
   <TextView
@@ -18,6 +19,7 @@
     android:layout_height="wrap_content"
     android:minEms="3"
     android:paddingLeft="2dip"
+    android:textColor="@color/text_color"
     android:textIsSelectable="false" />
 
   <TextView
@@ -26,6 +28,7 @@
     android:layout_height="wrap_content"
     android:minEms="5"
     android:paddingRight="20dip"
+    android:textColor="@color/text_color"
     android:textIsSelectable="false" />
 
 </LinearLayout>
