--- a/res/values/colors_real_beauty.xml
+++ b/res/values/colors_real_beauty.xml
@@ -26,5 +26,6 @@
   <color name="transparent">#00000000</color>
   <color name="pressed_real_beauty">@color/holo_blue_light</color>
   <color name="background">#F0F0F0</color>
+  <color name="text_color">#000000</color>
 
 </resources>
