--- a/res/layout-sw600dp-land/fragment_location.xml
+++ b/res/layout-sw600dp-land/fragment_location.xml
@@ -16,6 +16,19 @@
     android:orientation="vertical"
     tools:ignore="UselessParent" >
 
+    <com.realbeauty.allie.ui.widget.FontTextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/contact_details_address_title"
+      android:textColor="@color/holo_blue_dark" />
+
+    <com.realbeauty.allie.ui.widget.FontTextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:paddingBottom="20dip"
+      android:text="@string/contact_details_address"
+      android:textColor="@color/text_color" />
+
     <ImageView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -23,27 +36,26 @@
       android:contentDescription="@string/content_desc_map_salon_location"
       android:src="@drawable/map_view" />
 
-    <LinearLayout
-      android:id="@+id/fragment_contact_details_address"
+    <android.Space
+      android:layout_width="match_parent"
+      android:layout_height="0dip"
+      android:layout_weight="1" />
+
+    <com.realbeauty.allie.ui.widget.FontTextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:drawableLeft="@drawable/ic_nav"
+      android:gravity="center"
+      android:text="@string/navigate"
+      android:textColor="@color/holo_blue_dark" />
+
+    <ImageView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:orientation="vertical"
-      android:paddingLeft="20dip"
-      android:paddingRight="20dip"
-      android:paddingTop="20dip" >
+      android:layout_marginTop="10dip"
+      android:contentDescription="@null"
+      android:src="@drawable/tab_background_location" />
 
-      <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/contact_details_address_title"
-        android:textColor="@color/holo_blue_dark" />
-
-      <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/contact_details_address"
-        android:textColor="@color/text_color" />
-    </LinearLayout>
   </LinearLayout>
 
 </LinearLayout>
