--- a/res/layout-sw600dp-port/fragment_location.xml
+++ b/res/layout-sw600dp-port/fragment_location.xml
@@ -13,35 +13,47 @@
     android:layout_margin="@dimen/card_margin"
     android:background="@drawable/background_card"
     android:clickable="true"
-    android:gravity="center_vertical"
     android:orientation="horizontal"
     tools:ignore="UselessParent" >
 
-    <ImageView
+    <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_gravity="center"
-      android:contentDescription="@string/content_desc_map_salon_location"
-      android:src="@drawable/map_view" />
+      android:orientation="vertical" >
 
-    <LinearLayout
-      android:id="@+id/fragment_contact_details_address"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="vertical"
-      android:padding="10dip" >
-
-      <TextView
+      <com.realbeauty.allie.ui.widget.FontTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/contact_details_address_title"
         android:textColor="@color/holo_blue_dark" />
 
-      <TextView
+      <com.realbeauty.allie.ui.widget.FontTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/contact_details_address"
         android:textColor="@color/text_color" />
+    </LinearLayout>
+
+    <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical" >
+
+      <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@null"
+        android:paddingBottom="5dip"
+        android:paddingLeft="10dip"
+        android:src="@drawable/map_view" />
+
+      <com.realbeauty.allie.ui.widget.FontTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_nav"
+        android:gravity="center_vertical"
+        android:text="@string/navigate"
+        android:textColor="@color/holo_blue_dark" />
     </LinearLayout>
   </LinearLayout>
 
