--- a/res/layout/list_item_treatment.xml
+++ b/res/layout/list_item_treatment.xml
@@ -5,7 +5,7 @@
   android:orientation="horizontal"
   android:padding="15dip" >
 
-  <TextView
+  <com.realbeauty.allie.ui.widget.FontTextView
     android:id="@+id/treatment_title"
     android:layout_width="0dip"
     android:layout_height="wrap_content"
@@ -13,7 +13,7 @@
     android:textColor="@color/text_color"
     android:textIsSelectable="false" />
 
-  <TextView
+  <com.realbeauty.allie.ui.widget.FontTextView
     android:id="@+id/treatment_price"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -22,7 +22,7 @@
     android:textColor="@color/text_color"
     android:textIsSelectable="false" />
 
-  <TextView
+  <com.realbeauty.allie.ui.widget.FontTextView
     android:id="@+id/treatment_time"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
